...
    navController: NavController
) {
    Box(
        modifier = Modifier
            .fillMaxSize()
            .background(MaterialTheme.colorScheme.surface)
            .testTag("AuthScreen")
    ) {
        AppTitle(
            modifier = Modifier
                .align(Alignment.TopCenter)
                .offset(y = 40.dp)
                .fillMaxWidth()
...

            Spacer(modifier = Modifier.height(16.dp))

            AppButton(
                text = "Register",
                onClick =  { navController.navigate(Screen.Register.route) },
                modifier = Modifier.testTag("RegisterButton")
            )
        }
    }
}

@Preview(
...
