...
            .verticalScroll(scrollState)
            .padding(horizontal = 24.dp),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.Center
    ) {
        Text(
            text = "Log In",
            style = MaterialTheme.typography.headlineLarge.copy(
                fontFamily = Satoshi,
                fontWeight = FontWeight.Black,
                fontSize = 70.sp
            ),
            textAlign = TextAlign.Center,
...
